tests/NormalTests/paczka2/big_fuzzy/43557800.err
Error in line 2: mOTYJXrHwzq S803 1,6
Error in line 4: Svui A444 35,1
Error in line 7: mOTYJXrHwzq A276 -1,0
Error in line 15: thRwC75 S803 142,3
Error in line 18: Svui A147 -4,1
Error in line 16: thRwC75 A444 90,6
Error in line 14: EFqWkvUT S803 93,5
Error in line 38: S803 S803 78,5
Error in line 57: AKb9zNLn6G2 A147 57,4
Error in line 59: AKb9zNLn6G2 A276 81,2
Error in line 64: thRwC7 A147 7,
Error in line 44: Svui A147 336,6
Error in line 66: Svui A444 27,7
Error in line 3: mOTYJXrHwzq A276 47,6
Error in line 68: Svui A276 72,2
Error in line 94: thRwC75 A276 98,1
Error in line 103: thRwC75 S803 67,4
Error in line 77: pLNVjFLuZa A444 16,4
Error in line 111: Svui A276 6A,5
Error in line 107: thRwC75 A444 87,6
Error in line 138: S803 A444 22,6
Error in line 139: Svui A147 71,8
Error in line 141: EFqWkvUT A147 73,4
Error in line 168: pLNVjFLuZa A147 9,3
Error in line 172: pLNVjFLuZa A276 76,9
Error in line 196: thRwC75 S803 374,1
Error in line 200: thRwC75 A276 43,6
Error in line 199: AKb9zNLn6G2 A444 255,4
Error in line 201: thRwC75 A147 92,4
Error in line 204: AKb9zNLn6G2 A147 62,9
Error in line 217: AKb9zNLn6G2 A276 286,9
Error in line 226: thRwC75 A276 49,0
Error in line 218: S803 A276 19,9
Error in line 224: pLNVjFLuZa A444 74,2
Error in line 228: mOTYJXrHwzq A147 13,8
Error in line 247: S803 AB47 23,2
